[package]
name = "fxprof-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
fxprof-processed-profile = { git = "https://github.com/mstange/samply", rev = "a16596c" }
regex = "1.12.4"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
wholesym = "0.8.1"
